--- a/frontend/tsconfig.base.json
+++ b/frontend/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@env/*": ["src/environments/*"],
       "@shared/*": ["src/app/shared/*"],
       "@modules/*": ["src/app/modules/*"],
+      "@layout/*": ["src/app/layout/*"],
     }
   }
 }
