--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.7",
         "mongoose": "^5.9.25",
+        "mongoose-fuzzy-searching": "^1.3.1",
         "mongoose-partial-full-search": "0.0.4",
         "nodemailer": "^6.4.6",
         "rootpath": "^0.1.2",
