--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-signup-verification-boilerplate": {
+    "mean-manager": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-signup-verification-boilerplate",
+            "outputPath": "dist/mean-manager",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -61,24 +61,36 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-signup-verification-boilerplate:build"
+            "browserTarget": "mean-manager:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-signup-verification-boilerplate:build:production"
+              "browserTarget": "mean-manager:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "mean-manager:build:hmr"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-signup-verification-boilerplate:build"
+            "browserTarget": "mean-manager:build"
           }
         },
         "test": {
@@ -116,16 +128,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-signup-verification-boilerplate:serve"
+            "devServerTarget": "mean-manager:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-signup-verification-boilerplate:serve:production"
+              "devServerTarget": "mean-manager:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angular-signup-verification-boilerplate"
+  "defaultProject": "mean-manager"
 }
