--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-signup-verification-boilerplate",
+  "name": "mean-manager",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -31,9 +31,10 @@
     "@angular-devkit/build-angular": "^0.1000.1",
     "@angular/cli": "^10.0.1",
     "@angular/compiler-cli": "^10.0.3",
-    "@types/node": "^12.11.1",
+    "@angularclass/hmr": "^3.0.0",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.0",
