Mostly converted to material. Some form validaitons need to be fixed yet. Good enough for now

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
+    "hmr": "ng serve --open --configuration hmr",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
