--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "@angular/core": "^10.2.3",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.0.3",
+    "@angular/google-maps": "^11.0.1",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "^10.0.3",
     "@angular/platform-browser-dynamic": "^10.0.3",
     "@angular/router": "^10.0.3",
     "@swimlane/ngx-datatable": "^18.0.0",
+    "@types/googlemaps": "^3.39.13",
     "i": "^0.3.6",
     "nodemon": "^2.0.5",
     "rxjs": "^6.6.3",
